@@ -1,3 +1,7 @@
+2011-07-20  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug in year from Douban.com data source.
+
 2011-07-01  Robby Stephenson  <robby@periapsis.org>
 
 	* Added importer for MovieMeter.nl.
